...
                    Row(
                        modifier = Modifier
                            .drawBehind { drawRect(stickyHeaderBackgroundColor.value) }
                            .fillMaxWidth()
                    ) {
                        Button(onClick = viewModel::save) {
                            Text("Save")
                        }
                        Button(onClick = viewModel::openFile, Modifier.padding(start = 4.dp)) {
                            Text("Open")
                        }
                    }
                }

                itemsIndexed(viewModel.items(), { _, item -> item.first }) { _, item ->
                    val columnBackgroundColor = animateColorAsState(
...
